[gd_scene load_steps=6 format=3 uid="uid://bs1mvl8y2pnb1"]

[ext_resource type="Texture2D" uid="uid://c6yajbvtff28m" path="res://Pictures/Pictures/〓大刀.png" id="1_x8pij"]
[ext_resource type="Script" path="res://Script/shopItem.gd" id="2_ctv3p"]
[ext_resource type="Texture2D" uid="uid://c1klyrdx4piby" path="res://Icons/Mouse_UP.png" id="3_2k7ft"]
[ext_resource type="Texture2D" uid="uid://dpeywrbqefx01" path="res://Icons/Mouse_DOWN.png" id="4_12hyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbggt"]

[node name="Node2D" type="TextureRect" groups=["shopItem"]]
custom_minimum_size = Vector2(120, 120)
anchors_preset = 10
anchor_right = 1.0
offset_right = -957.0
offset_bottom = 195.0
grow_horizontal = 2
texture = ExtResource("1_x8pij")
script = ExtResource("2_ctv3p")

[node name="Label2" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.172549)
layout_mode = 0
offset_right = 1151.0
offset_bottom = 134.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hbggt")

[node name="itemName" type="Label" parent="."]
layout_mode = 2
offset_left = 130.0
offset_top = 41.0
offset_right = 337.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 40
text = "青钢剑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="golds" type="Label" parent="."]
layout_mode = 2
offset_left = 695.0
offset_top = 34.0
offset_right = 764.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 30
text = "400"
vertical_alignment = 1

[node name="Button" type="TextureButton" parent="."]
z_index = 4
z_as_relative = false
layout_mode = 2
anchor_right = 5.913
anchor_bottom = 0.626
offset_right = -0.0350342
offset_bottom = 10.93
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
visible = false
self_modulate = Color(0.937255, 0.937255, 0.937255, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="button10" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.152
offset_left = 556.0
offset_top = 10.0
offset_right = 580.92
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "10
"

[node name="button5" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.152
offset_left = 499.0
offset_top = 10.0
offset_right = 518.176
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "5"

[node name="button1" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.152
offset_left = 433.0
offset_top = 10.0
offset_right = 452.176
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "1"

[node name="down" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 370.0
offset_top = 61.0
offset_right = 447.0
offset_bottom = 101.0
texture = ExtResource("4_12hyl")

[node name="downButton" type="Button" parent="Control/down"]
self_modulate = Color(1, 1, 1, 0.129412)
layout_mode = 0
offset_left = 16.0
offset_right = 57.0
offset_bottom = 42.0

[node name="up" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 578.0
offset_top = 61.0
offset_right = 655.0
offset_bottom = 101.0
texture = ExtResource("3_2k7ft")

[node name="upButton" type="Button" parent="Control/up"]
self_modulate = Color(1, 1, 1, 0.129412)
layout_mode = 0
offset_left = 20.0
offset_right = 61.0
offset_bottom = 44.0

[node name="num" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 432.0
offset_top = 50.0
offset_right = 588.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 40
text = "1"
alignment = 1

[node name="clear" type="Button" parent="Control"]
layout_mode = 0
offset_left = 596.0
offset_top = 13.0
offset_right = 651.0
offset_bottom = 45.0
text = "归一"

[node name="itemNum" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 314.0
offset_top = 47.0
offset_right = 354.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 30
text = "40
"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="Control/button10" to="." method="_on_button_10_button_down"]
[connection signal="pressed" from="Control/button10" to="." method="_on_button_10_pressed"]
[connection signal="button_down" from="Control/button5" to="." method="_on_button_5_button_down"]
[connection signal="pressed" from="Control/button5" to="." method="_on_button_5_pressed"]
[connection signal="button_down" from="Control/button1" to="." method="_on_button_1_button_down"]
[connection signal="pressed" from="Control/button1" to="." method="_on_button_1_pressed"]
[connection signal="button_down" from="Control/down/downButton" to="." method="_on_down_button_button_down"]
[connection signal="button_down" from="Control/up/upButton" to="." method="_on_up_button_button_down"]
[connection signal="text_changed" from="Control/num" to="." method="_on_num_text_changed"]
[connection signal="button_down" from="Control/clear" to="." method="_on_clear_button_down"]
[connection signal="pressed" from="Control/clear" to="." method="_on_clear_pressed"]
